# CANDY-Benchmark

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  buildCPUOnly.sh  buildWithCuda.sh  commit.sh  commit_info  genDoc.sh  setup.py  temp
benchmark/: CMakeLists.txt  README.md  temp1.csv  temp2.csv
benchmark/scripts/: cleanPython.sh  config.csv  expList.txt  yy.csv
benchmark/scripts/DAGNN/: DQN.py  dagnn_morl_offline.py  dagnn_online_train.py  drl_example_simple.py  drl_utils.py  intelli_timestamp_generator.py  pybind_test.py  requirements.txt  saferl_offline.py  torch_helper.py  warmup_before_batch.py
benchmark/scripts/DPRDataset/: README.md  deps.txt  dpr_dataset_100K.py  dpr_dataset_10M.py  dpr_dataset_50KDrift.py  dpr_synthetic.py  drawTogether.py  multimodal.py  rania.csv  testDpr.py  testNltk.py  testmultimodal.ipynb  wget-log  wget-log.1
benchmark/scripts/Flink/: README.md
benchmark/scripts/PyCANDY/: README.md  basic_search.ipynb  example.rbt  perf.ipynb  perf.py  ssd.py
benchmark/scripts/breakdownHNSW/: config_e2e_static_lazy.csv  drawTogether.py  groupLine.py  temp2.csv  temp3.csv
benchmark/scripts/cache_ref/: accuBar.py  accuBarBk.py  config_template.csvt  debug.ipynb  drawTogether.py  groupBar2.py  groupLine.py  runAKNN.py
benchmark/scripts/cocoDataset/: deps.txt  drawTogether.py  multimodal.py
benchmark/scripts/cycles_breakdown_1/: accuBarBk.py  debug.ipynb  drawTogether.py  groupBar2.py  groupLine.py  runAKNN.py  temp1.csv  temp2.csv
benchmark/scripts/downloadDataSet/: downLoadHDF5.py  downLoadTarGz.py
benchmark/scripts/fancyDownstream/: BleuAndRougeEvaluator.py  CANDYRetriever.py  CANDYRetriever2.py  README.md  basic_search.ipynb  history_USSR_aircraft.txt  key_USSR_aircraft.txt  rag_evaluate_janes.ipynb  rag_evaluate_wiki.ipynb  rania.csv
benchmark/scripts/findOptimum/: autoParase.py  config_e2e_static_lazy.csv  drawTogether.py
benchmark/scripts/redditDataSet/: drawTogether.py  redditDataset.py  test.ipynb
benchmark/scripts/scanIPComp/: PAPI_EVENTS_SILVER.txt  drawTogether.py
benchmark/scripts/scanIPConceptDriftHotSpot/: drawTogether.py
benchmark/scripts/scanIPConceptDriftTopic/: drawTogether.py  groupLine.py  temp2.csv  temp3.csv
benchmark/scripts/scanIPConceptDriftTopicNoDropping/: config_e2e_static_lazy.csv  drawTogether.py  temp2.csv
benchmark/scripts/scanIPDimensions/: drawTogether.py  groupLine.py  temp2.csv
benchmark/scripts/scanIPEndToEnd/: drawTogether.py  t0.csv  t1.csv  temp2.csv
benchmark/scripts/scanIPEndToEndComp/: OnlinePQIndex_fine.rbt  config_e2e_static_lazy.csv  drawTogether.py  t1.csv  temp2.csv
benchmark/scripts/scanIPEndToEndML/: OoOCommon.py  config_e2e_static_lazy.csv  drawTogether.py  t0.csv  t1.csv  temp2.csv
benchmark/scripts/scanIPEndToEndMultimodal/: drawTogether.py  t1.csv  temp2.csv
benchmark/scripts/scanIPEndToEndNoDropping/: drawTogether.py  groupBar2.py  t0.csv  t1.csv
benchmark/scripts/scanIPEventRate/: config_e2e_static_lazy.csv  drawTogether.py  groupLine.py  temp2.csv
benchmark/scripts/scanIPEventRateFaissHalfWay/: config_e2e_static_lazy.csv  drawTogether.py  temp2.csv
benchmark/scripts/scanIPFeedMode/: accuBar.py  config_e2e_static_lazy.csv  drawSVI.py  drawTogether.py  groupLine.py  temp2.csv
benchmark/scripts/scanIPSSDBufferSize/: drawTogether.py  groupLine.py
benchmark/scripts/scanIPVecVolume/: config_e2e_static_lazy.csv  drawTogether.py  fault.csv  groupLine.py  temp2.csv
benchmark/scripts/scanL2EndToEnd/: OnlinePQIndex_coarse.rbt  config_e2e_static_lazy.csv  drawTogether.py  t0.csv  temp.csv  temp2.csv
benchmark/scripts/scanL2EndToEndDistance/: config_e2e_static_lazy.csv  drawTogether.py  t0.csv  t1.csv  temp3.csv
benchmark/scripts/scanMultiModalPropotion/: dpr_dataset_generate.py  dpr_synthetic.py  drawTogether.py  dummy.csv  groupBar2.py  groupLine.py  temp2.csv  temp3.csv  testNltk.py  testNltkBk.py
benchmark/src/: Benchmark.cpp  MultiRW.cpp  OfflineBuild.cpp  OnlineCUD.cpp  OnlineInsert.cpp  OnlineInsertLSHAPG.cpp  OnlineUpdateDiskANN.cpp  faissTest.cpp  runFt.sh  torchTest.cpp
src/Algorithms/: AbstractIndex.cpp  CANDYObject.cpp  CMakeLists.txt  CongestionDropIndex.cpp  FlannIndex.cpp  FlatAMMIPIndex.cpp  FlatGPUIndex.cpp  HNSWNaiveIndex.cpp  IndexTable.cpp  KNNSearch.cpp  LSHAPGIndex.cpp  NNDescentIndex.cpp  PQIndex.cpp  ParallelPartitionIndex.cpp  YinYangGraphIndex.cpp  YinYangGraphSimpleIndex.cpp
src/CANDY/: AbstractIndex.cpp  BKTIndex.cpp  BucketedFlatIndex.cpp  BufferedCongestionDropIndex.cpp  CANDYObject.cpp  CMakeLists.txt  ConcurrentIndex.cpp  CongestionDropIndex.cpp  DAGNNIndex.cpp  DEGIndex.cpp  DPGIndex.cpp  DistributedPartitionIndex.cpp  FaissIndex.cpp  FlannIndex.cpp  FlatAMMIPIndex.cpp  FlatAMMIPObjIndex.cpp  FlatGPUIndex.cpp  FlatIndex.cpp  FlatSSDGPUIndex.cpp  GravistarIndex.cpp  Grid2DIndex.cpp  HNSWNaiveIndex.cpp  HNSWTensorIndex.cpp  IndexTable.cpp  LSH.cpp  LSHAPGIndex.cpp  MatrixGraphIndex.cpp  NNDescentIndex.cpp  OnlineIVFL2HIndex.cpp  OnlineIVFLSHIndex.cpp  OnlinePQIndex.cpp  PQIndex.cpp  ParallelPartitionIndex.cpp  SPTAGIndex.cpp  ThresholdIndex.cpp  YinYangGraphIndex.cpp  YinYangGraphSimpleIndex.cpp  YinYangHNSWIndex.cpp
test/: CMakeLists.txt
test/SystemTest/: ClusteringTest.cpp  CudaTest.cpp  DAGNNTest.cpp  DPGIndexTest.cpp  DistributedPartitionIndexTest.cpp  FlatAMMIPIndexTest.cpp  FlatAMMIPObjIndexTest.cpp  FlatIndexTest.cpp  GravistarIndexTest.cpp  HNSWTensorTest.cpp  HNSWTest.cpp  KdTreeTest.cpp  LSHAPGIndexTest.cpp  LSHTest.cpp  NNDescentIndexTest.cpp  NSGTest.cpp  OnlineIVFLSHIndexTest.cpp  OnlinePQIndexTest.cpp  PQIndexTest.cpp  ParallelPartitionIndexTest.cpp  PreprocessTest.cpp  SONGTest.cu  SPDKTest.cpp  SPTAGIndexTest.cpp  SimpleTest.cpp  ThresholdTest.cpp  YinYangGraphIndexTest.cpp  YinYangGraphSimpleIndexTest.cpp  YinYangHNSWIndexTest.cpp  catch.hpp  catch_reporter_automake.hpp  catch_reporter_sonarqube.hpp  catch_reporter_tap.hpp  catch_reporter_teamcity.hpp
test/scripts/: config_CRS.csv  config_CRSV2.csv  config_EWS.csv  config_SRHT.csv  config_WeightedCR.csv  config_countSketch.csv  config_fastJLT.csv
(+7481 files in other folders)
